[package]
name = "guse"
version = "0.4.3"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/someotherself/GUSE"
keywords = ["git", "fuse", "rust"]
categories = ["filesystem"]
description = "Under development. A git-based virtual filesystem mounted with fuse. It allows mounting of multiple repositories independently. Either fetched repositories from github, or empty storing and versioning local files."

[[bin]]
name = "guse"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["cargo"] }
libc = "0.2.175"
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
fuser = { version = "0.16.0", features = ["abi-7-28"] }
chrono = "0.4.41"
tempfile = "3.21.0"
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
memchr = "2.7.6"
parking_lot = "0.12.5"
rand = "0.9.2"
mlua = { version = "0.11.4", features = ["lua54", "vendored"] }
sha1 = "0.10.6"
strip-ansi-escapes = "0.2.1"
shell-words = "1.1.0"
blake3 = "1.8.2"
ctrlc = "3.5.1"
